<resources>
    <string name="app_name">Currenyexchange</string>
    <string name="no_network">No network</string>
    <string name="select_currency">select currency</string>
    <string name="from">from</string>
    <string name="amount">Amount</string>
    <string name="amount_result">Amount result</string>
    <string name="swip">Swip</string>
    <string name="to">to</string>
    <string name="result">Result</string>
    <string name="write_amount">write amount</string>
    <string name="details">details</string>
    <string name="no_data">No data</string>
    <string-array name="currencyarrays">
        <item>EUR</item>
        <item>USD</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>EGP</item>
        <item>SAR</item>
        <item>QAR</item>
        <item>AED</item>
    </string-array>
</resources>