<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    tools:context=".Ui.Activity.ShowexcahngeoperationActivity">
    <data class="ShowOperationBinding">

        <import type="android.view.View" />
        <import type="android.view.Gravity" />

        <variable
            name="showoperationViewModel"
            type="com.t.currenyexchange.viewmodels.ShowOprationsViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textSize="14sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_result"
                android:textSize="14sp"
                android:textColor="@color/black"/>
        </LinearLayout>
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:id="@+id/listitem"
               bind:opertaions="@{showoperationViewModel.operations}"
               android:layout_marginEnd="20dp"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/no_data"
               android:visibility="@{showoperationViewModel.operations.size() > 0 ? View.GONE : View.VISIBLE}"
               android:layout_gravity="center"
               android:textSize="16sp"
               android:textColor="@color/black"/>
       </FrameLayout>
    </LinearLayout>
</layout>