<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools">

    <data class="CurrencyExchangeBinding">

        <import type="android.view.View" />
        <import type="android.view.Gravity" />

        <variable
            name="currencyexchangeViewModel"
            type="com.t.currenyexchange.viewmodels.CurrencyExchangeViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout.AutoComplete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                bind:from="@{currencyexchangeViewModel.currencies}"
                bind:viewmodel="@{currencyexchangeViewModel}"
                android:text="@{currencyexchangeViewModel.from}"
                android:keyboardNavigationCluster="false"
                android:inputType="none"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout.AutoComplete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/to"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
                bind:to="@{currencyexchangeViewModel.currencies}"
                bind:viewmodel="@{currencyexchangeViewModel}"
                android:text="@{currencyexchangeViewModel.to}"
                android:keyboardNavigationCluster="false"
                android:inputType="none"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:onTextChanged="@{currencyexchangeViewModel.onamountChanged()}"
            android:inputType="phone"
            android:gravity="center"/>
        <EditText
            android:id="@+id/amountresult"
            android:layout_marginStart="15dp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/amount_result"
            android:inputType="phone"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/result"
        android:onClick="@{()->currencyexchangeViewModel.getchangeresult()}"
        android:background="@color/black"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/details"
        android:onClick="@{()->currencyexchangeViewModel.showpervious()}"
        android:background="@color/black"
        android:textColor="@color/white"/>
</LinearLayout>


</layout>